# plaatcraft

./: .gitignore  CMakeLists.txt  README.md  build.sh
assets/shaders/: block.frag  block.vert  flat.frag  flat.vert
desktop/: .gitignore  CMakeLists.txt
desktop/assets/shaders/: block.frag
desktop/include/: chunk.h  config.h.in  database.h  game.h  random.h
desktop/include/geometry/: block.h  plane.h
desktop/include/math/: matrix4.h
desktop/include/shaders/: block_shader.h  flat_shader.h  shader.h
desktop/include/textures/: text_texture.h  texture.h  texture_atlas.h
desktop/src/: camera.c  chunk.c  game.c  main.c  random.c  world.c
desktop/src/geometry/: block.c
desktop/src/glad/: glad.c
desktop/src/math/: matrix4.c  vector4.c
desktop/src/perlin/: perlin.c
desktop/src/shaders/: shader.c
desktop/src/stb_image/: stb_image.c
desktop/src/textures/: texture.c  texture_atlas.c
include/: block.h  camera.h  chunk.h  color.h  config.h.in  font.h  game.h  glad.h  log.h  matrix4.h  shader.h  texture_atlas.h  utils.h  vector4.h  world.h
include/geometry/: block.h  plane.h
include/glad/: glad.h
include/math/: matrix4.h  rect.h  vector4.h
include/perlin/: perlin.h
include/shaders/: block_shader.h  flat_shader.h  shader.h
include/textures/: texture.h  texture_atlas.h
src/: block.c  camera.c  chunk.c  database.c  font.c  game.c  glad.c  log.c  main.c  matrix4.c  shader.c  stb_image.c  texture_atlas.c  utils.c  vector4.c  world.c
src/geometry/: block.c  plane.c
src/math/: matrix4.c  vector4.c
src/shaders/: block_shader.c  flat_shader.c  shader.c
src/stb_image/: stb_image.c
src/stb_truetype/: stb_truetype.c
src/textures/: stb_image.c  text_texture.c  texture.c  texture_atlas.c
src/tinycthread/: tinycthread.c
wii/: .gitignore  Makefile
wii/include/: blocks_data.h  camera.h  canvas.h  chunk.h  cursor.h  font_chars.h  pages.h  perlin.h  random.h  utils.h  world.h
wii/src/: blocks_data.c  camera.c  canvas.c  chunk.c  cursor.c  font_chars.c  main.c  pages.c  perlin.c  random.c  utils.c  world.c
wii/textures/: blocks_texture.scf  cursors_texture.scf  font_texture.scf
